<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >
    
    <EditText
        android:id="@+id/searchQuery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="145dp"
        android:ems="10"
        android:inputType="text" />
         

    <Button
        android:id="@+id/searchQueryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="49dp"
            android:gravity="center_horizontal"
            android:paddingBottom="30dp"
            android:text="@string/enter_title_of_a_book"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/link2gz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="14dp"
            android:gravity="center_horizontal"
            android:text="@string/copyright"
            android:textSize="12sp" />

</RelativeLayout>