<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/pagetitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/editions"
        android:textSize="18sp" 
        android:paddingTop="10dp" 
        android:paddingBottom="15dp" />

    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dp"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/bookCover"
            android:layout_width="45dp"
            android:layout_height="65dp"
            android:scaleType="fitXY"
            android:src="@drawable/book" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/infocell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/thumbnail"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/authorNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#666"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#666"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/link2gz"
        android:layout_below="@+id/infocell"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/book_search_list"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" 
            android:layout_margin="8dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/link2gz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:text="@string/copyright"
        android:textSize="12sp" />

</RelativeLayout>